# deployment_demo_model_training

./: README.md  pyproject.toml  scaler.pkl
src/: main.py
src/data/: data_processor.py  data_splitter.py
src/model/: trainer.py
