[project]
name = "heart-disease-trainer"
version = "0.1.0"
description = "\"Pipeline de entrenamiento para heart-disease dataset\""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "\"APACHE 2.0\""}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.5.1,<2.0.0)",
    "xgboost (>=2.1.3,<3.0.0)",
    "joblib (>=1.4.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
